@@ -1,1 +1,4 @@
 # VirtualThreadTry
+
+Jdk 19 
+--enable-preview --release 19
